created button to add 10 additional gifs, added some styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <div class="container">
         <h1>Gif Search</h1>
 
-        <div id="buttons-view"></div>
-
         <form id="topic-form">
             <label for="topic-input">Add a Gif</label>
             <input type="text" id="topic-input">
@@ -23,6 +21,10 @@
             <!-- Button triggers new movie to be added -->
             <input id="add-topic" type="submit" value="Add a Gif">
         </form>
+
+        <button id="add-more">Add 10 More Gifs</button>
+
+        <div id="buttons-view"></div>
 
         <div id="gif-view"></div>
 
