--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Giphy API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>Gif Search</h1>
 
-        <form id="topic-form">
-            <label for="topic-input">Add a Gif</label>
-            <input type="text" id="topic-input">
-            <br>
+        <div class="jumbotron">
+            <form id="topic-form">
+                <input type="text" id="topic-input" placeholder="Enter new topic here">
+                <br>
 
-            <!-- Button triggers new movie to be added -->
-            <input id="add-topic" type="submit" value="Add a Gif">
-        </form>
+                <!-- Button triggers new movie to be added -->
+                <input id="add-topic" type="submit" value="Add a Gif">
+            </form>
 
-        <button id="add-more">Add 10 More Gifs</button>
+            <button id="add-more">Add 10 More Gifs</button>
 
-        <div id="buttons-view"></div>
+            <div id="buttons-view"></div>
+        </div>
 
         <div id="gif-view"></div>
 
