more style changes

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
         <div class="jumbotron">
             <form id="topic-form">
-                <input type="text" id="topic-input" placeholder="Enter new topic here">
-                <br>
+                <input type="text" id="topic-input" class="form-control" placeholder="Enter new topic here">
 
                 <!-- Button triggers new movie to be added -->
-                <input id="add-topic" type="submit" value="Add a Gif">
+                <input id="add-topic" class="btn btn-primary" type="submit" value="Add Topic">
             </form>
 
             <button id="add-more">Add 10 More Gifs</button>
