--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Giphy API</title>
+    <title>Movie and Television Gif Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
 
 <body>
     <div class="container-fluid">
-        <h1>Gif Search</h1>
+        <h1>Movie and Television Gif Generator</h1>
 
         <div class="jumbotron">
             <form id="topic-form">
-                <input type="text" id="topic-input" class="form-control" placeholder="Enter new topic here">
+                <input type="text" id="topic-input" class="form-control" placeholder="Enter new movie or show here">
 
                 <!-- Button triggers new movie to be added -->
-                <input id="add-topic" class="btn btn-primary" type="submit" value="Add Topic">
+                <input id="add-topic" class="btn btn-primary" type="submit" value="Add">
             </form>
 
             <div id="buttons-view"></div>
-            
-            <button id="add-more">Add 10 More Gifs</button>
+
+            <button id="add-more" class="btn btn-success">Add 10 More Gifs</button>
         </div>
 
         <div id="gif-view"></div>
